--- a/src/components/SettingsMenu/SelfPacedModal/CalendarStyles.css
+++ b/src/components/SettingsMenu/SelfPacedModal/CalendarStyles.css
@@ -22,7 +22,7 @@
 
 .react-calendar__tile--active {
   background-color: #82ebac !important;
-  color: black;
+  color: darkgreen;
   font-weight: bolder;
   text-decoration: underline;
 
